--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "react-router-dom": "^6.22.3"
-  }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+}
 }
