--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "devStart": "nodemon index.js",
-    "build" : "npm build"
+    "build" : "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
