--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "react-router-dom": "^6.22.3"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build -- --input= src/App.jsx" 
+    "build:client": "cd client && npm install && npm run build",
+    "build:server": "cd server && npm install && npm run build",
+    "start": "npm run build:client && npm run build:server"
   }
+  
   
 }
